--- a/testes/ios-developer/MoviesDB/MoviesDB/Resources/Base.lproj/Main.storyboard
+++ b/testes/ios-developer/MoviesDB/MoviesDB/Resources/Base.lproj/Main.storyboard
@@ -1,44 +1,157 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Movie View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MoviesDB" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MovieViewController" customModule="MoviesDB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello, world!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="46T-XV-lDF">
-                                <rect key="frame" x="150.5" y="440" width="113" height="26"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="HZp-4p-dbr">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Click Movie" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h80-Pf-iel">
+                                        <rect key="frame" x="110" y="0.0" width="194" height="42"/>
+                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="35"/>
+                                        <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="JpE-r2-Kt7">
+                                        <rect key="frame" x="2" y="47" width="410" height="771"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="145" id="YP9-9b-ekp" customClass="MovieTableViewCell" customModule="MoviesDB" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="44.5" width="410" height="145"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YP9-9b-ekp" id="oCN-N0-4x9">
+                                                    <rect key="frame" x="0.0" y="0.0" width="410" height="145"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zd4-Hl-Ibs">
+                                                            <rect key="frame" x="10" y="10" width="85" height="125"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="125" id="e2I-ij-K8n"/>
+                                                                <constraint firstAttribute="width" constant="85" id="yGR-7Q-ZLr"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8mY-jt-O1a">
+                                                            <rect key="frame" x="370" y="9.5" width="30" height="30"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="30" id="bK7-uy-SSJ"/>
+                                                                <constraint firstAttribute="width" constant="30" id="cAC-dA-yJr"/>
+                                                            </constraints>
+                                                            <imageReference key="image" image="star.fill" catalog="system" renderingMode="hierarchical">
+                                                                <hierarchicalColors>
+                                                                    <color red="0.33333333329999998" green="0.33333333329999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                                    <color systemColor="secondaryLabelColor"/>
+                                                                    <color systemColor="tertiaryLabelColor"/>
+                                                                </hierarchicalColors>
+                                                            </imageReference>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t34-lk-FN4">
+                                                            <rect key="frame" x="103" y="70" width="297" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HJZ-22-GTk">
+                                                            <rect key="frame" x="370" y="42" width="30" height="30"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="30" id="qNm-9y-NEe"/>
+                                                                <constraint firstAttribute="width" constant="30" id="wn2-4r-37o"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1rh-94-bej">
+                                                            <rect key="frame" x="103" y="10" width="257" height="26.5"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wTF-dF-RSu">
+                                                            <rect key="frame" x="103" y="41.5" width="257" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="t34-lk-FN4" firstAttribute="top" secondItem="wTF-dF-RSu" secondAttribute="bottom" constant="8" symbolic="YES" id="02r-QK-2oI"/>
+                                                        <constraint firstItem="wTF-dF-RSu" firstAttribute="leading" secondItem="zd4-Hl-Ibs" secondAttribute="trailing" constant="8" symbolic="YES" id="2hz-x7-ky2"/>
+                                                        <constraint firstAttribute="trailing" secondItem="8mY-jt-O1a" secondAttribute="trailing" constant="10" id="6BO-Ew-IQt"/>
+                                                        <constraint firstItem="wTF-dF-RSu" firstAttribute="top" secondItem="1rh-94-bej" secondAttribute="bottom" constant="5" id="Ci1-Tc-H3a"/>
+                                                        <constraint firstItem="HJZ-22-GTk" firstAttribute="top" secondItem="8mY-jt-O1a" secondAttribute="bottom" constant="2" id="GwB-mD-52X"/>
+                                                        <constraint firstItem="zd4-Hl-Ibs" firstAttribute="leading" secondItem="oCN-N0-4x9" secondAttribute="leading" constant="10" id="HPd-to-J84"/>
+                                                        <constraint firstItem="zd4-Hl-Ibs" firstAttribute="top" secondItem="oCN-N0-4x9" secondAttribute="top" constant="10" id="Lea-kI-8ZY"/>
+                                                        <constraint firstItem="t34-lk-FN4" firstAttribute="leading" secondItem="zd4-Hl-Ibs" secondAttribute="trailing" constant="8" symbolic="YES" id="RpJ-uI-ojQ"/>
+                                                        <constraint firstAttribute="trailing" secondItem="HJZ-22-GTk" secondAttribute="trailing" constant="10" id="TuV-PG-Kd8"/>
+                                                        <constraint firstAttribute="trailing" secondItem="t34-lk-FN4" secondAttribute="trailing" constant="10" id="kRq-qW-7Na"/>
+                                                        <constraint firstItem="8mY-jt-O1a" firstAttribute="leading" secondItem="1rh-94-bej" secondAttribute="trailing" constant="10" id="kft-Yl-uaw"/>
+                                                        <constraint firstItem="8mY-jt-O1a" firstAttribute="top" secondItem="oCN-N0-4x9" secondAttribute="top" constant="10" id="mXJ-xB-BKG"/>
+                                                        <constraint firstItem="1rh-94-bej" firstAttribute="top" secondItem="oCN-N0-4x9" secondAttribute="top" constant="10" id="qEY-pm-D2Q"/>
+                                                        <constraint firstItem="HJZ-22-GTk" firstAttribute="leading" secondItem="wTF-dF-RSu" secondAttribute="trailing" constant="10" id="rYo-Of-TDH"/>
+                                                        <constraint firstAttribute="bottom" secondItem="zd4-Hl-Ibs" secondAttribute="bottom" constant="10" id="sJS-t1-cj3"/>
+                                                        <constraint firstItem="1rh-94-bej" firstAttribute="leading" secondItem="zd4-Hl-Ibs" secondAttribute="trailing" constant="8" symbolic="YES" id="uNd-9N-Tnz"/>
+                                                    </constraints>
+                                                </tableViewCellContentView>
+                                                <connections>
+                                                    <outlet property="movieOverview" destination="t34-lk-FN4" id="lsA-8u-zTT"/>
+                                                    <outlet property="moviePoster" destination="zd4-Hl-Ibs" id="Gfj-g5-kKq"/>
+                                                    <outlet property="movieRate" destination="HJZ-22-GTk" id="mXT-KA-Py8"/>
+                                                    <outlet property="movieTitle" destination="1rh-94-bej" id="QWI-0C-D2K"/>
+                                                    <outlet property="movieYear" destination="wTF-dF-RSu" id="f0g-1L-KpD"/>
+                                                </connections>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="JpE-r2-Kt7" secondAttribute="trailing" constant="2" id="4kw-oy-rqB"/>
+                                    <constraint firstItem="JpE-r2-Kt7" firstAttribute="leading" secondItem="HZp-4p-dbr" secondAttribute="leading" constant="2" id="BsG-4t-37l"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="46T-XV-lDF" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="asf-A9-Crx"/>
-                            <constraint firstItem="46T-XV-lDF" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="tbW-Vx-LRc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="HZp-4p-dbr" secondAttribute="bottom" id="1vT-l8-veC"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HZp-4p-dbr" secondAttribute="trailing" id="XBW-mu-lZX"/>
+                            <constraint firstItem="HZp-4p-dbr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="pGs-rg-rxs"/>
+                            <constraint firstItem="HZp-4p-dbr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xPe-fF-Qxa"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="JpE-r2-Kt7" id="eeU-fL-hCX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="141" y="88"/>
+            <point key="canvasLocation" x="140.57971014492756" y="87.723214285714278"/>
         </scene>
     </scenes>
     <resources>
+        <image name="star.fill" catalog="system" width="128" height="116"/>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="tertiaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
